--- a/MusicPlayer_BC/MusicPlayer_BC/Base.lproj/Main.storyboard
+++ b/MusicPlayer_BC/MusicPlayer_BC/Base.lproj/Main.storyboard
@@ -16,23 +16,21 @@
                         <rect key="frame" x="0.0" y="0.0" width="428" height="926"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="00:00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="spc-ES-CV4">
-                                <rect key="frame" x="156" y="298" width="117" height="34"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="00:00:00" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="spc-ES-CV4">
+                                <rect key="frame" x="155.66666666666666" y="333" width="116.99999999999997" height="33.666666666666686"/>
                                 <fontDescription key="fontDescription" style="UICTFontTextStyleTitle1"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <slider opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="5xN-4o-BZ9">
-                                <rect key="frame" x="55" y="375" width="318" height="30"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <slider opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" value="0.5" minValue="0.0" maxValue="1" translatesAutoresizingMaskIntoConstraints="NO" id="5xN-4o-BZ9">
+                                <rect key="frame" x="57" y="396.66666666666669" width="314" height="31"/>
                                 <color key="minimumTrackTintColor" systemColor="systemPinkColor"/>
                                 <connections>
                                     <action selector="sliderValueChanged:" destination="BYZ-38-t0r" eventType="valueChanged" id="rOg-ob-OYG"/>
                                 </connections>
                             </slider>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="LFs-U3-tw7">
-                                <rect key="frame" x="120.66666666666669" y="94" width="187" height="189"/>
+                                <rect key="frame" x="119" y="94" width="190" height="189"/>
                                 <state key="normal" image="button_play"/>
                                 <state key="selected" image="button_pause"/>
                                 <connections>
@@ -43,9 +41,15 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
-                            <constraint firstItem="LFs-U3-tw7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="FhC-7t-1bz"/>
-                            <constraint firstItem="LFs-U3-tw7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="cPc-Ld-JQ2"/>
-                            <constraint firstItem="LFs-U3-tw7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="qlt-Jv-x9Y"/>
+                            <constraint firstItem="5xN-4o-BZ9" firstAttribute="top" secondItem="spc-ES-CV4" secondAttribute="bottom" constant="30" id="IDl-do-hvU"/>
+                            <constraint firstItem="spc-ES-CV4" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="L1r-Ek-JCd"/>
+                            <constraint firstItem="LFs-U3-tw7" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="119" id="Lbm-CR-g75"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="LFs-U3-tw7" secondAttribute="trailing" constant="119" id="Sm0-yK-35V"/>
+                            <constraint firstItem="LFs-U3-tw7" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="50" id="ToT-u1-bpS"/>
+                            <constraint firstItem="spc-ES-CV4" firstAttribute="top" secondItem="LFs-U3-tw7" secondAttribute="bottom" constant="50" id="UJn-go-LhV"/>
+                            <constraint firstItem="5xN-4o-BZ9" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="59" id="Zal-Mk-OKD"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="5xN-4o-BZ9" secondAttribute="trailing" constant="59" id="eHE-vD-569"/>
+                            <constraint firstItem="LFs-U3-tw7" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="jzG-8W-1jA"/>
                         </constraints>
                     </view>
                     <connections>
